Fix ion icon issue on safari browers and setup for jquery navbar

--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -88,8 +88,48 @@
     margin: 0 0 4% 0;
   }
 
-  .main-nav {
+  /* .main-nav {
     display: none;
+  } */
+
+  .mobile-nav-icon {
+    display: inline-block;
+    font-size: 200%;
+  }
+
+  .main-nav {
+    float: left;
+    margin-top: 35px;
+    margin-left: 25px;
+  }
+
+  .main-nav li {
+    display: block;
+  }
+
+  .main-nav li a:link,
+  .main-nav li a:visited {
+    display: block;
+    border: 0;
+    padding: 10px 0;
+    font-size: 100%;
+  }
+
+  .sticky .main-nav {
+    margin-top: 10px;
+  }
+
+  .sticky .main-nav li a:link,
+  .sticky .main-nav li a:visited {
+    padding: 10px 0;
+  }
+
+  .sticky .mobile-nav-icon {
+    margin-top: 10px;
+  }
+
+  .sticky .mobile-nav-icon i {
+    color: pink;;
   }
 
   h1 {
@@ -126,11 +166,11 @@
     margin-right: 15px;
   }
 
-  cite { 
+  cite {
     margin-top: 5px;
-    margin-bottom: 25px; 
+    margin-bottom: 25px;
     float: right;
-}
+  }
 
   .form-button-div {
     text-align: center;
@@ -205,9 +245,9 @@
       margin: 5px 0;
       font-size: 150%;
     }
-    
+
     ul.social-links {
-        padding-left: 0;
+      padding-left: 0;
     }
 
     .social-links li {
