--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -5,7 +5,7 @@
 html,
 body {
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   background-color: #fff;
   color: #555;
   font-family: "Lato", "Arial", sans-serif;
@@ -19,7 +19,7 @@ body {
 *:before,
 *:after {
   -webkit-box-sizing: inherit;
-          box-sizing: inherit;
+  box-sizing: inherit;
 }
 
 * {
@@ -123,6 +123,7 @@ h3 {
   margin-bottom: 10px;
   margin-left: auto;
   margin-right: auto;
+  text-align: center;
 }
 
 .icon-small {
@@ -210,7 +211,13 @@ input[type="submit"]:active {
 =============================================*/
 
 header {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.7))),
+  background-image: -webkit-gradient(
+      linear,
+      left top,
+      left bottom,
+      from(rgba(0, 0, 0, 0.7)),
+      to(rgba(0, 0, 0, 0.7))
+    ),
     url(/resources/css/img/hero.jpg);
   background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
     url(/resources/css/img/hero.jpg);
@@ -226,7 +233,7 @@ header {
   top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
 
 .logo {
@@ -236,8 +243,8 @@ header {
   margin-top: 20px;
 }
 
-.logo-black { 
-  display: none; 
+.logo-black {
+  display: none;
   height: 50px;
   width: auto;
   float: left;
@@ -287,11 +294,13 @@ header {
   width: 100%;
   background-color: rgba(255, 255, 255, 0.99);
   -webkit-box-shadow: 0 2px 2px #efefef;
-          box-shadow: 0 2px 2px #efefef;
+  box-shadow: 0 2px 2px #efefef;
   z-index: 999;
 }
 
-.sticky .main-nav { margin-top: 15px; }
+.sticky .main-nav {
+  margin-top: 15px;
+}
 
 .sticky .main-nav li a:link,
 .sticky .main-nav li a:visited {
@@ -299,8 +308,29 @@ header {
   color: #555;
 }
 
-.sticky .logo { display: none; }
-.sticky .logo-black { display: block; }
+.sticky .logo {
+  display: none;
+}
+.sticky .logo-black {
+  display: block;
+}
+
+/*=============================================
+=            MOBILE NAV            =
+=============================================*/
+
+.mobile-nav-icon {
+  float: right;
+  margin-top: 30px;
+  cursor: pointer;
+  display: none;
+  color: #fff;
+  font-size: 200%;
+}
+
+.mobile-nav-icon:hover {
+  color: #e67e22;
+}
 
 /*=============================================
 =            FEATURES            =
@@ -341,7 +371,7 @@ header {
   width: 100%;
   height: auto;
   -webkit-transform: scale(1.15);
-          transform: scale(1.15);
+  transform: scale(1.15);
   -webkit-transition: opacity 1s, -webkit-transform 1s;
   transition: opacity 1s, -webkit-transform 1s;
   transition: transform 1s, opacity 1s;
@@ -351,7 +381,7 @@ header {
 .meal-photo img:hover {
   opacity: 1;
   -webkit-transform: scale(1.03);
-          transform: scale(1.03);
+  transform: scale(1.03);
 }
 
 /*=============================================
@@ -363,7 +393,7 @@ header {
 }
 
 .step-box {
-    margin-top: 30px;
+  margin-top: 30px;
 }
 
 .steps-box:first-child {
@@ -432,7 +462,13 @@ header {
 =============================================*/
 
 .section-testimonials {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.8)), to(rgba(0, 0, 0, 0.8))),
+  background-image: -webkit-gradient(
+      linear,
+      left top,
+      left bottom,
+      from(rgba(0, 0, 0, 0.8)),
+      to(rgba(0, 0, 0, 0.8))
+    ),
     url(/resources/css/img/back-customers.jpg);
   background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
     url(/resources/css/img/back-customers.jpg);
@@ -485,7 +521,7 @@ cite img {
   width: 90%;
   margin-left: 5%;
   -webkit-box-shadow: 0 2px 2px #efefef;
-          box-shadow: 0 2px 2px #efefef;
+  box-shadow: 0 2px 2px #efefef;
 }
 
 .plan-box div:first-child {
@@ -641,22 +677,21 @@ footer p {
   margin-top: 20px;
 }
 
-
 /*=============================================
 =            ANIMATIONS            =
 =============================================*/
- 
+
 .js--wp-1,
 .js--wp-2,
 .js--wp-3 {
   opacity: 0;
   -webkit-animation-duration: 1s;
-          animation-duration: 1s;
+  animation-duration: 1s;
 }
 
 .js--wp-4 {
   -webkit-animation-duration: 1s;
-          animation-duration: 1s;
+  animation-duration: 1s;
 }
 
 .js--wp-1.animated,
